--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@algofi-js/v1",
+  "name": "@algofi/v1",
   "version": "0.0.1",
   "description": "The official JavaScript SDK for the V2 Algofi Lending Market",
   "main": "dist/index.js",
