--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "algosdk": "1.16.0",
+    "axios": "^0.27.2",
     "typescript": "^3.9.10"
   },
   "devDependencies": {
