--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "algosdk": "1.16.0",
-    "http": "^0.0.1-security",
+    "http-browserify": "^1.7.0",
     "typescript": "^3.9.10"
   },
   "devDependencies": {
